# fly-cli

./: .env.example  .gitignore  AUTHORS  ChangeLog  LICENSE.md  Makefile  README.md  setup.cfg  setup.py
examples/greeter/: greeter  greeter.py  requirements.txt
examples/slack/: requirements.txt  slack  slack.py
fly_cli/: __init__.py
tests/: conftest.py  test_fly_cli.py
