[metadata]
author = datashaman
author_email = marlinf@datashaman.com
home-page = https://github.com/datashaman/fly-cli
license = mit
name = fly-cli
summary = Invoke class methods from the command-line.

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[entry_points]
console_scripts =
    fly = fly_cli:main

[extras]
develop =
    pypandoc
    pytest
    twine
